--- a/packages/volto-iframe-block/locales/en/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/en/LC_MESSAGES/volto.po
@@ -11,6 +11,16 @@ msgstr ""
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
 
+#. Default: "Credit"
+#: components/schema
+msgid "Credit"
+msgstr ""
+
+#. Default: "Description"
+#: components/schema
+msgid "Description"
+msgstr ""
+
 #. Default: "Error"
 #: components/Edit
 msgid "Error"
