--- a/packages/volto-iframe-block/locales/es/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/es/LC_MESSAGES/volto.po
@@ -18,6 +18,16 @@ msgstr ""
 "X-Is-Fallback-For: es-ar es-bo es-cl es-co es-cr es-do es-ec es-es es-sv es-gt es-hn es-mx es-ni es-pa es-py es-pe es-pr es-us es-uy es-ve\n"
 "X-Generator: Poedit 2.2.1\n"
 
+#. Default: "Credit"
+#: components/schema
+msgid "Credit"
+msgstr ""
+
+#. Default: "Description"
+#: components/schema
+msgid "Description"
+msgstr ""
+
 #. Default: "Error"
 #: components/Edit
 msgid "Error"
