chore: update locales

--- a/packages/volto-iframe-block/locales/en/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/en/LC_MESSAGES/volto.po
@@ -73,9 +73,9 @@ msgstr ""
 msgid "Type a Iframe URL"
 msgstr ""
 
-#. Default: "Values are in Pixels"
+#. Default: "Values are in Pixels (e.g. 100 or 100px) or Percent (e.g. 100%)"
 #: components/schema
-msgid "Values are in Pixels"
+msgid "Values are in Pixels (e.g. 100 or 100px) or Percent (e.g. 100%)"
 msgstr ""
 
 #. Default: "Width"
