--- a/packages/volto-iframe-block/locales/volto.pot
+++ b/packages/volto-iframe-block/locales/volto.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2025-02-25T09:33:36.629Z\n"
+"POT-Creation-Date: 2025-02-25T10:06:06.493Z\n"
 "Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -75,9 +75,9 @@ msgstr ""
 msgid "Type a Iframe URL"
 msgstr ""
 
-#. Default: "Values are in Pixels"
+#. Default: "Values are in Pixels (e.g. 100 or 100px) or Percent (e.g. 100%)"
 #: components/schema
-msgid "Values are in Pixels"
+msgid "Values are in Pixels (e.g. 100 or 100px) or Percent (e.g. 100%)"
 msgstr ""
 
 #. Default: "Width"
