--- a/packages/volto-iframe-block/locales/de/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/de/LC_MESSAGES/volto.po
@@ -53,6 +53,16 @@ msgstr "Keine Iframe-Quelle angegeben"
 msgid "Open in a new tab"
 msgstr "In neuem Tab öffnen"
 
+#. Default: "Preserve aspect ratio"
+#: components/schema
+msgid "Preserve aspect ratio"
+msgstr "Seitenverhältnis beibehalten"
+
+#. Default: "Preserve aspect ratio based on initial width and height"
+#: components/schema
+msgid "Preserve aspect ratio based on initial width and height"
+msgstr "Seitenverhältnis basierend auf der ursprünglichen Breite und Höhe beibehalten"
+
 #. Default: "Provide an iFrame title for better accessibility for screenreaders (title will not be visible),"
 #: components/schema
 msgid "Provide an iFrame title for better accessibility for screenreaders (title will not be visible),"
