improve default message

--- a/packages/volto-iframe-block/locales/de/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/de/LC_MESSAGES/volto.po
@@ -38,7 +38,7 @@ msgstr "Höhe"
 msgid "Iframe"
 msgstr "Iframe"
 
-#. Default: "Invalid url"
+#. Default: "This URL is not allowed."
 #: components/View
 #: helpers/isValidUrl
 msgid "Invalid url"
