--- a/packages/volto-iframe-block/locales/es/LC_MESSAGES/volto.po
+++ b/packages/volto-iframe-block/locales/es/LC_MESSAGES/volto.po
@@ -45,7 +45,7 @@ msgstr ""
 msgid "Iframe"
 msgstr ""
 
-#. Default: "Invalid url"
+#. Default: "This URL is not allowed."
 #: components/View
 #: helpers/isValidUrl
 msgid "Invalid url"
